--- a/package.json
+++ b/package.json
@@ -4,17 +4,27 @@
   "private": true,
   "dependencies": {
     "@tanstack/react-query": "^5.56.2",
+    "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow/tfjs": "^4.21.0",
+    "@tensorflow/tfjs-backend-cpu": "^4.21.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.21.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
+    "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-draw": "^0.20.4",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.1",
+    "tensorflow-models": "^0.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
