--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
+    "konva": "^9.3.15",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-konva": "^18.2.10",
     "react-leaflet": "^4.2.1",
     "react-leaflet-draw": "^0.20.4",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.1",
+    "react-toastify": "^10.0.5",
     "tensorflow-models": "^0.0.1",
+    "use-image": "^1.1.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
