--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.0",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.2"
+    "mongoose": "^8.6.2",
+    "sharp": "^0.33.5"
   }
 }
