--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.1",
-    "react-toastify": "^10.0.5",
+    "react-spinners": "^0.15.0",
+    "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
     "tensorflow-models": "^0.0.1",
     "use-image": "^1.1.1",
