--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
+    "nodemailer": "^6.9.16",
     "sharp": "^0.33.5"
   }
 }
