--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "konva": "^9.3.15",
+    "leaflet": "^1.9.4",
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -21,6 +22,7 @@
     "react-konva": "^18.2.10",
     "react-leaflet": "^4.2.1",
     "react-leaflet-draw": "^0.20.4",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
@@ -29,6 +31,7 @@
     "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
     "tensorflow-models": "^0.0.1",
+    "use-debounce": "^10.0.4",
     "use-image": "^1.1.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
