--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
     "@tanstack/react-query": "^5.56.2",
+    "@tensorflow/tfjs": "^4.22.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,7 +13,7 @@
     "chart.js": "^4.4.7",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
-    "konva": "^9.3.15",
+    "konva": "^9.3.18",
     "leaflet": "^1.9.4",
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
