--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-select": "^5.8.1",
     "react-spinners": "^0.15.0",
     "react-toastify": "^10.0.6",
+    "react-top-loading-bar": "^3.0.2",
     "redux-persist": "^6.0.0",
     "use-debounce": "^10.0.4",
     "use-image": "^1.1.1",
